--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
 		"@chakra-ui/react": "^2.8.2",
 		"@emotion/react": "^11.13.0",
 		"@emotion/styled": "^11.13.0",
+		"@reduxjs/toolkit": "^2.2.7",
 		"antd": "^5.19.2",
 		"framer-motion": "^11.3.8",
 		"next": "14.2.5",
 		"react": "^18",
-		"react-dom": "^18"
+		"react-dom": "^18",
+		"react-redux": "^9.1.2"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
