--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@emotion/styled": "^11.13.0",
 		"@reduxjs/toolkit": "^2.2.7",
 		"antd": "^5.19.2",
+		"clsx": "^2.1.1",
 		"framer-motion": "^11.3.8",
 		"next": "14.2.5",
 		"react": "^18",
